--- a/courses/index.html
+++ b/courses/index.html
@@ -15,6 +15,7 @@ permalink: /courses/
       <p>
         Free online courses and tutorials on design, development, UX, accessibility, and career skills.
       </p>
+      {%- include_relative about/index.html -%}
     </div>
   </header>
 
