Update courses landing page
- Update header description language

--- a/courses/index.html
+++ b/courses/index.html
@@ -13,7 +13,8 @@ permalink: /courses/
     <div class="container">
       <h1>Courses</h1>
       <p>
-        Free online courses and tutorials on design, development, UX, accessibility, and career skills.
+        <strong class="block">Free online courses and tutorials.</strong>
+        Learn new skills on design, development, UX, accessibility, and career skills.
       </p>
       {%- include_relative about/index.html -%}
     </div>
