Update about courses section
- Update content and markup

--- a/courses/about/index.html
+++ b/courses/about/index.html
@@ -1,17 +1,18 @@
 <details class="about-courses">
   <summary><b>Learn About Our Courses</b></summary>
-  <div class="callout container-fluid">
+  <div class="white-panel container-fluid">
     <div class="row">
       <div class="col-md-4">
         <header>
           <h2>Full Courses</h2>
-          <p>Learn new skills in a few days.</p>
+          <!-- <p>Learn new skills in a few days.</p> -->
         </header>
         <dl>
           <div>
             <dt>Benefits</dt>
+            <dd><span>Learn new skills in a few days</span></dd>
             <dd><span>Earn a Certificate: Shareable on LinkedIn (when you pass the final exam)</span></dd>
-            <dd><span>Course Forum: Share work and get feedback from students and teaching assistants</span></dd>
+            <dd><span>Forum: Share work and get feedback from students and teaching assistants</span></dd>
             <dd><span>Optional: Lesson homework and quizzes that prepare you for the final exam</span></dd>
           </div>
           <div>
@@ -24,11 +25,12 @@
       <div class="col-md-4">
         <header>
           <h2>Gym Shorts</h2>
-          <p>Learn new skills in a few hours.</p>
+          <!-- <p>Learn new skills in a few hours.</p> -->
         </header>
         <dl>
           <div>
             <dt>Benefits</dt>
+            <dd><span>Learn new skills in a few hours</span></dd>
             <dd><span>Earn a Badge: Shareable on LinkedIn (when you pass the final exam)</span></dd>
           </div>
           <div>
@@ -41,11 +43,12 @@
       <div class="col-md-4">
         <header>
           <h2>Take 5 (Tutorials)</h2>
-          <p>Learn new skills in 5 minutes.</p>
+          <!-- <p>Learn new skills in 5 minutes.</p> -->
         </header>
         <dl>
           <div>
             <dt>Benefits</dt>
+            <dd><span>Learn new skills in 5 minutes</span></dd>
             <dd><span>Microlearning for everyone</span></dd>
             <dd><span>No homework or exam</span></dd>
           </div>
