--- a/courses/take5/course-list-recent.html
+++ b/courses/take5/course-list-recent.html
@@ -44,7 +44,7 @@ permalink: /courses/take5/course-list-recent
     <article class="row">
       <figure class="col-md-4">
         <a href="{{ course.title | slugify | prepend: base_path }}">
-          <img class="img-responsive" src="{{ course.poster_art | prepend: site.url }}" alt="{{ course.course_ID | remove: 'gym-' }} {{ course.title }} cover image." decoding="async" loading="lazy">
+          <img src="{{ course.poster_art | prepend: site.url }}" alt="{{ course.course_ID | remove: 'gym-' }} {{ course.title }} cover image." decoding="async" loading="lazy">
         </a>
         <figcaption>
           <a href="{{ course.title | slugify | prepend: base_path }}" class="gym-button"><b>Watch Now</b></a>
@@ -58,6 +58,20 @@ permalink: /courses/take5/course-list-recent
         <p>
           {{ course.short_description }}
         </p>
+        <div class="row">
+          <div class="col-md-5">
+            <dl>
+              <dt>Skill Level</dt>
+              <dd>{{ course.skill_level }}</dd>
+            </dl>
+          </div>
+          <div class="col-md-7">
+            <dl>
+              <dt>Tutorial Length</dt>
+              <dd>{{ course.video_duration }}</dd>
+            </dl>
+          </div>
+        </div>
       </div>
     </article>
   </li>
