--- a/courses/about/index.html
+++ b/courses/about/index.html
@@ -10,15 +10,14 @@
         <dl>
           <div>
             <dt>Benefits</dt>
-            <dd><span>Learn new skills in a few days</span></dd>
-            <dd><span>Earn a Certificate: Shareable on LinkedIn (when you pass the final exam)</span></dd>
-            <dd><span>Forum: Share work and get feedback from students and teaching assistants</span></dd>
-            <dd><span>Optional: Lesson homework and quizzes that prepare you for the final exam</span></dd>
+            <dd>Earn a Certificate: Shareable on LinkedIn (if you pass the final exam)</dd>
+            <dd>Forum: Share work and get feedback from students and teaching assistants</dd>
+            <dd>Optional: Lesson homework and quizzes that prepare you for the final exam</dd>
           </div>
           <div>
             <dt>Length</dt>
-            <dd><span>Video Lessons: 2.5 hours; up to 5 hours</span></dd>
-            <dd><span>Course Completion: 12 hours, up to 22 hours</span></dd>
+            <dd>Video Lessons: 2.5 hours; up to 5 hours</dd>
+            <dd>Course Completion: 12 hours, up to 22 hours</dd>
           </div>
         </dl>
       </div>
@@ -30,31 +29,29 @@
         <dl>
           <div>
             <dt>Benefits</dt>
-            <dd><span>Learn new skills in a few hours</span></dd>
-            <dd><span>Earn a Badge: Shareable on LinkedIn (when you pass the final exam)</span></dd>
+            <dd>Earn a Badge: Shareable on LinkedIn (if you pass the final exam)</dd>
           </div>
           <div>
             <dt>Length</dt>
-            <dd><span>Video Lessons: Under 1 hour, up to 2 hours</span></dd>
-            <dd><span>Course Completion: 1 hour, up to 5 hours</span></dd>
+            <dd>Video Lessons: Under 1 hour, up to 2 hours</dd>
+            <dd>Course Completion: 1 hour, up to 5 hours</dd>
           </div>
         </dl>
       </div>
       <div class="col-md-4">
         <header>
-          <h2>Take 5 (Tutorials)</h2>
+          <h2>Take 5 Tutorials</h2>
           <!-- <p>Learn new skills in 5 minutes.</p> -->
         </header>
         <dl>
           <div>
             <dt>Benefits</dt>
-            <dd><span>Learn new skills in 5 minutes</span></dd>
-            <dd><span>Microlearning for everyone</span></dd>
-            <dd><span>No homework or exam</span></dd>
+            <dd>No homework or exam</dd>
+            <dd>Video tutorial with transcript</dd>
           </div>
           <div>
             <dt>Length</dt>
-            <dd><span>Video Lesson: 5 minutes or less</span></dd>
+            <dd>5 minutes or less</dd>
           </div>
         </dl>
       </div>
