Update courses about section
- Update layout
- Update tutorials content
- Update punctuation

--- a/courses/about/index.html
+++ b/courses/about/index.html
@@ -5,7 +5,6 @@
       <div class="col-md-4">
         <header>
           <h2>Full Courses</h2>
-          <!-- <p>Learn new skills in a few days.</p> -->
         </header>
         <dl>
           <div>
@@ -16,7 +15,7 @@
           </div>
           <div>
             <dt>Length</dt>
-            <dd>Video Lessons: 2.5 hours; up to 5 hours</dd>
+            <dd>Video Lessons: 2.5 hours, up to 5 hours</dd>
             <dd>Course Completion: 12 hours, up to 22 hours</dd>
           </div>
         </dl>
@@ -24,7 +23,6 @@
       <div class="col-md-4">
         <header>
           <h2>Gym Shorts</h2>
-          <!-- <p>Learn new skills in a few hours.</p> -->
         </header>
         <dl>
           <div>
@@ -41,11 +39,11 @@
       <div class="col-md-4">
         <header>
           <h2>Take 5 Tutorials</h2>
-          <!-- <p>Learn new skills in 5 minutes.</p> -->
         </header>
         <dl>
           <div>
             <dt>Benefits</dt>
+            <dd>Learn new skills in 5 minutes</dd>
             <dd>No homework or exam</dd>
             <dd>Video tutorial with transcript</dd>
           </div>
