Update summary-link statement
- Remove summary-link mixin
- Update summary-link class name
- Add gym-summary-link to main.css

--- a/courses/take5/index.html
+++ b/courses/take5/index.html
@@ -76,7 +76,7 @@ permalink: /courses/take5/
           <div class="col-md-4">
             <nav class="take5--tutorial-topics" aria-labelledby="tutorial-topics">
               <details open class="take5--topics-menu" id="tutorial-topics">
-                <summary aria-expanded="true/false" tabindex="0" role="button">
+                <summary class="gym-summary-link" aria-expanded="true/false" tabindex="0" role="button">
                   <b role="heading">Category</b>
                 </summary>
                 <div class="take5--topics-menu-list">
