Update courses language
- Update case formatting

--- a/courses/about/index.html
+++ b/courses/about/index.html
@@ -22,6 +22,7 @@
             {%- endfor -%}
           </div>
         </dl>
+        <p><a href="#full">Learn More</a></p>
       </div>
       <div class="col-md-4">
         <header>
@@ -41,6 +42,7 @@
             {%- endfor -%}
           </div>
         </dl>
+        <p><a href="#gymshorts">Learn More</a></p>
       </div>
       <div class="col-md-4">
         <header>
@@ -60,6 +62,7 @@
             {%- endfor -%}
           </div>
         </dl>
+        <p><a href="#take5">Learn More</a></p>
       </div>
     </div>
   </div>
