--- a/courses/gym-shorts/course-list-recent.html
+++ b/courses/gym-shorts/course-list-recent.html
@@ -86,7 +86,7 @@ permalink: /courses/gym-shorts/course-list-recent
                 {%- endfor -%}
               </div>
               <div>
-                <dt>Video Lessons Length</dt>
+                <dt>Video Content</dt>
                 <dd>{{ course.lessons_duration }}</dd>
               </div>
               <div>
