Update catalog name
- Remove "gym-" prefix

--- a/courses/index.html
+++ b/courses/index.html
@@ -9,7 +9,7 @@ permalink: /courses/
 {%- assign courses = site.data.courses-page -%}
 
 <!-- TODO: maybe create a new CSS file for the entire course catalog page? -->
-<section class="find-courses" id="gym-catalog">
+<section class="find-courses" id="catalog">
 
   <header class="about">
     <div class="container">
@@ -54,7 +54,7 @@ permalink: /courses/
                 {%- include_relative full/course-list-recent.html -%}
               </ul>
               <div class="to-top-link">
-                <a href="#gym-catalog"><b>Back to top</b></a>
+                <a href="#catalog"><b>Back to top</b></a>
               </div>
             </section>
 
@@ -70,7 +70,7 @@ permalink: /courses/
                 {%- include_relative gym-shorts/course-list-recent.html -%}
               </ul>
               <div class="to-top-link">
-                <a href="#gym-catalog"><b>Back to top</b></a>
+                <a href="#catalog"><b>Back to top</b></a>
               </div>
             </section>
 
@@ -91,7 +91,7 @@ permalink: /courses/
                 </a>
               </div>
               <div class="to-top-link">
-                <a href="#gym-catalog"><b>Back to top</b></a>
+                <a href="#catalog"><b>Back to top</b></a>
               </div>
             </section>
           </section>
