--- a/take5/catalog-debug.html
+++ b/take5/catalog-debug.html
@@ -5,11 +5,11 @@ permalink: /take5/debug
 
 {%- comment -%}
 //
-// This page is just for debugging -- It will eventually go away
+// TODO: This page is just for debugging -- It will eventually go away
 //
 {%- endcomment -%}
 
-<link rel="stylesheet" href="https://deploy-preview-109--gymcms.netlify.com/css/take-5.css/">
+<link rel="stylesheet" href="https://thegymcms.com/css/take-5.css">
 <main id="main" role="main">
 <h1 class="title all-caps">Take 5 Catalog Page</h1>
 
