Update courses about include
- Update include path

--- a/courses/gym-shorts/index.html
+++ b/courses/gym-shorts/index.html
@@ -17,6 +17,7 @@ permalink: /courses/gym-shorts/
         <strong class="block">{{ courses.main.tagline }}</strong>
         {{ courses.main.short_description }}
       </p>
+      {%- include courses/about/index.html -%}
     </div>
   </header>
 
