Update workshops content
- Add GYM-700 data
- Rename landing page include
- Add workshop include
- Update headshot image
- Update couses-list-recent include

--- a/courses/workshops/course-list-recent.html
+++ b/courses/workshops/course-list-recent.html
@@ -67,7 +67,7 @@ permalink: /courses/workshops/course-list-recent
             <dl>
               <dt>Skills Covered</dt>
               {%- for skill in course.skills -%}
-              <dd><span>{{ skill.label }}</span></dd>
+              <dd>{{ skill.label }}</dd>
               {%- endfor -%}
             </dl>
           </div>
@@ -75,7 +75,7 @@ permalink: /courses/workshops/course-list-recent
             <dl>
               <dt>This Course Is For</dt>
               {%- for audience in course.audience -%}
-              <dd><span>{{ audience.label }}</span></dd>
+              <dd>{{ audience.label }}</dd>
               {%- endfor -%}
             </dl>
           </div>
