--- a/courses/workshops/index.html
+++ b/courses/workshops/index.html
@@ -6,27 +6,7 @@ permalink: /courses/workshops/
   {%- include partials/test-top.html -%}
 {%- endif -%}
 
-{%- assign workshops = site.data.workshops-page -%}
-
-<section class="find-courses" id="catalog">
-
-  <header class="about">
-    <div class="container">
-      <h1>{{ workshops.main.title }}</h1>
-      <p>
-        <strong class="block">{{ workshops.main.tagline }}</strong>
-        {{ workshops.main.short_description }}
-      </p>
-    </div>
-  </header>
-
-  <main id="main" class="container" aria-label="Content" tabindex="-1" role="main">
-
-  <!-- TK -->
-
-  </main>
-
-</section>
+{%- include workshops/workshop.html -%}
 
 {%- if jekyll.environment == "local" -%}
   {%- include partials/test-bottom.html -%}
