Update design systems collection page
- Update header language

--- a/hub-pages/design-systems/index.html
+++ b/hub-pages/design-systems/index.html
@@ -14,10 +14,10 @@ permalink: /design-systems/
                 Design Systems
               </h1>
               <p>
-                We just dropped four free courses on design systems for <a href="#designers"><b>designers</b></a>, <a href="#developers"><b>developers</b></a>, and <a href="#product-managers"><b>product managers</b></a>.
+                Explore our collection of free design systems courses for <a href="#designers"><b>designers</b></a>, <a href="#developers"><b>developers</b></a>, and <a href="#product-managers"><b>product managers</b></a>.
               </p>
               <p>
-                Not sure where to start? Don’t sweat it — we’ve got a course for <a href="#everyone"><b>everyone</b></a>.
+                Not sure where to start? There’s even a course for <a href="#everyone"><b>everyone</b></a>.
               </p>
               <ul class="sticky-notes">
                 <li class="bg-ux-design"><a href="#designers"><b>Designers</b></a></li>
