--- a/hub-pages/collections/collections.html
+++ b/hub-pages/collections/collections.html
@@ -3,7 +3,8 @@ layout: wrapper-full-default
 permalink: /collections/
 
 ---
-<link rel="stylesheet" href="{{ site.url }}/css/collections.css">
+<link rel="stylesheet" href="{{ site.url }}/css/hub-pages.css?{{ site.time | date:'%s' }}" fetchpriority="hight">
+
 <main id="main" role="main">
   <header class="collections--about" id="about">
     <div class="container">
