--- a/hub-pages/design-systems/index.html
+++ b/hub-pages/design-systems/index.html
@@ -2,7 +2,8 @@
 layout: wrapper-full-default
 permalink: /design-systems/
 ---
-<link rel="stylesheet" href="{{ site.url }}/css/hub-pages.css">
+<link rel="stylesheet" href="{{ site.url }}/css/hub-pages.css?{{ site.time | date:'%s' }}" fetchpriority="high">
+
 <main class="design-systems" id="main" role="main">
   <section id="about">
     <div class="banner-content container-fluid">
