Update accessibility collection content
- Add Advocating for Accessbility article
- Update link redirects, from Vitamin Talent to Aquent Talent
- Update broken links
- Update services section, remove and update content
- Add style priority hint

--- a/hub-pages/accessibility/index.html
+++ b/hub-pages/accessibility/index.html
@@ -2,7 +2,7 @@
 layout: wrapper-full-default
 permalink: /accessibility/
 ---
-<link rel="stylesheet" href="{{ site.url }}/css/hub-pages.css?{{ site.time | date:'%s' }}">
+<link rel="stylesheet" href="{{ site.url }}/css/hub-pages.css?{{ site.time | date:'%s' }}" fetchpriority="high">
 
 <main id="main" role="main">
   <section id="about">
@@ -72,12 +72,12 @@ permalink: /accessibility/
                           </h2>
                         </header>
                         <figure class="full-width">
-                          <img alt="A hard-to-see low contrast button next to an easy-to-see high contrast button for context." src="{{ site.url }}/img/hub-pages/accessibility/featured/color-and-accessibility-in-design.png" width="1280" height="720" decoding="async">
+                          <img alt="Aaron wearing a blue beanie while working at the computer." src="{{ site.url }}/home/img/heros/articles/advocating-for-accessibility/advocating-for-accessibility-1280w.png" width="1280" height="720" decoding="async">
                         </figure>
-                        <h3 class="all-caps">I Can See Clearly Now: Color and Accessibility in Design</h3>
+                        <h3 class="all-caps">Advocating for Accessibility with Aaron Gustafson</h3>
                       </div>
                       <div class="card-cta card-cta-button">
-                        <a class="gym-button" href="https://medium.com/gymnasium/i-can-see-clearly-now-color-and-accessibility-in-design-1fe6382755ff" target="_blank" rel="noopener"><b>Learn More</b></a>
+                        <a class="gym-button" href="https://medium.com/gymnasium/advocating-for-accessibility-with-aaron-gustafson-54079c132152" target="_blank" rel="noopener"><b>Learn More</b></a>
                       </div>
                     </div>
                     <footer class="card-cta">
@@ -85,31 +85,6 @@ permalink: /accessibility/
                     </footer>
                   </article>
                 </li>
-<!--
-                <li>
-                  <article class="card">
-                    <div class="card-content featured">
-                      <div class="card-main bg-web-development equal-h">
-                        <header class="full-width">
-                          <h2 class="all-caps">
-                            <span class="visuallyhidden">Accessibility</span> Services
-                          </h2>
-                        </header>
-                        <figure class="full-width">
-                          <img alt="We make accessibility expertise accessible." src="{{ site.url }}/img/hub-pages/accessibility/featured/aquent-digital-accessibility.png" width="1280" height="720" decoding="async">
-                        </figure>
-                      <h3 class="all-caps">Digital Accessibility Expertise</span></h3>
-                      </div>
-                      <div class="card-cta card-cta-button">
-                        <a class="gym-button" href="https://aquent.com/services/digital-accessibility" target="_blank" rel="noopener"><b>Learn More</b></a>
-                      </div>
-                    </div>
-                    <footer class="card-cta">
-                      <a href="#services"><b>View More Services</b></a>
-                    </footer>
-                  </article>
-                </li>
-  -->
               </ul>
             </div>
           </div>
@@ -207,7 +182,7 @@ permalink: /accessibility/
               <div class="list-hr">
                 <ul>
                 <li>
-                  <h3><a href="https://brand.vitamintalent.com/digitalks-accessibility-replay" target="_blank" rel="noopener">Why Digital Accessibility and Inclusive Design Matters</a></h3>
+                  <h3><a href="https://aquenttalent.com/events/why-digital-accessibility-and-inclusive-design-matters" target="_blank" rel="noopener">Why Digital Accessibility and Inclusive Design Matters</a></h3>
                   <p>Learn how to put inclusive design first and avoid common accessibility mistakes.</p>
                 </li>
               </ul>
@@ -226,7 +201,11 @@ permalink: /accessibility/
               <div class="list-hr">
                 <ul>
                   <li>
-                    <h3><a href="https://vitamintalent.com/blog/seven-steps-to-improving-accessibility" target="_blank" rel="noopener">Seven Steps to Improving Accessibility</a></h3>
+                    <h3><a href="https://medium.com/gymnasium/advocating-for-accessibility-with-aaron-gustafson-54079c132152" target="_blank" rel="noopener">Advocating for Accessibility with Aaron Gustafson</a></h3>
+                    <p>Learn the fundamentals of how to get started with creating a more inclusive web. (Hint: It starts with awareness.)</p>
+                  </li>
+                  <li>
+                    <h3><a href="https://aquenttalent.com/blog/seven-steps-to-improving-accessibility" target="_blank" rel="noopener">Seven Steps to Improving Accessibility</a></h3>
                     <p>Improve the accessibility of your website with these seven starting points for designers, writers, and developers.</p>
                   </li>
                   <li>
@@ -324,11 +303,11 @@ permalink: /accessibility/
               <div class="list-hr">
                 <ul>
                   <li>
-                    <h3><a href="https://aquentstudios.com/" target="_blank" rel="noopener">Projects</a></h3>
+                    <h3><a href="https://aquent.com/brands/aquent-studios" target="_blank" rel="noopener">Projects</a></h3>
                     <p>If you’re looking to outsource accessibility projects, Aquent Studios can assemble and lead a team of accessibility experts and specialists in design, development, experience, and content to achieve your goals.</p>
                   </li>
                   <li>
-                    <h3><a href="https://aquent.com/services/staffing" target="_blank" rel="noopener">Staffing</a></h3>
+                    <h3><a href="https://aquent.com/brands/aquent-talent" target="_blank" rel="noopener">Staffing</a></h3>
                     <p>Finding people with deep knowledge of accessibility can be like finding a needle in a haystack. Luckily, we know where to look. Our experienced recruiters and vast talent pool mean you can complete accessibility projects and bring in specialized skill sets when you need them.</p>
                   </li>
                   <li>
